# background-remover

./: deploy.sh  docker-compose.yml  package.json
astro/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
astro/src/components/: action-button.astro  action-menu.astro  dropzone.astro
astro/src/hooks/: use-canvas.ts  utils.ts
astro/src/layouts/: Layout.astro
astro/src/lib/: constants.ts  db.ts  types.ts
astro/src/pages/: canvas.astro  index.astro
backend/: .dockerignore  .gitignore  Dockerfile  canny_filter.py  color_variance.py  diffmate.py  fly.toml  glcm.py  gradient_magnitude.py  pipeline.py  pyproject.toml  requirements.txt  server.py  trimap_generation_attempt_1.py
backend/.fly/scripts/: init.sh
backend/backend/: app.py  app2.py  app3.py  app4.py  app5.py  sam_model.py  server.py  utils.py
backend/lib/: color_variance.py  pipeline.py  utils.py
backend/modeling/diffusion/: uniform_gauss.py
website/: .gitignore  Dockerfile  README.md  app.config.ts  biome.json  components.json  drizzle.config.ts  migrate.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  todos.md  tsconfig.json
website/drizzle/: 0000_chunky_nitro.sql  0001_messy_satana.sql  0002_colossal_wild_child.sql  0002_yielding_blue_blade.sql  0003_glorious_triathlon.sql  0004_clean_the_liberteens.sql  0005_fancy_gauntlet.sql  0006_early_zzzax.sql  0007_crazy_silver_sable.sql
website/public/: birefnet.js  transformer.js
website/src/: app.css  app.tsx  entry-client.tsx  entry-server.tsx  global.d.ts  middleware.ts
website/src/lib/: auth.ts  (+10 more)
(+117 files in other folders)
