[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["JesusP2 <jesus_perez99@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.39.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
